--- a/heading.html
+++ b/heading.html
@@ -1,2 +1,15 @@
-<h1>This is the H1 tag headings</h1>
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>This is the H1 tag headings</h1>
+    <p> This is the paragraph </p>
 <h2>This is the H2 tag headings</h2>
+</body>
+</html>
