--- a/heading.html
+++ b/heading.html
@@ -5,11 +5,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Headings in HTML</title>
 </head>
 <body>
     <h1>This is the H1 tag headings</h1>
     <p> This is the paragraph </p>
+    
 <h2>This is the H2 tag headings</h2>
 </body>
 </html>
