New Code 20 Jun 2023

--- a/Project.html
+++ b/Project.html
@@ -12,7 +12,13 @@
     <button class="b1" type="button">Login</button>
     <button class="b2" type="button">Explore</button>
     <button class="b3" type="button">Rent</button>
-    
+    <div style="background-image: url(Rectangle17Cart.png);no-repeat scroll center center transparent"></div>
+    <div class="a2">
+      <p class="H2">About Us </p>
+      
+      </div>
+    </div>
+
 
 </body>
 </html>
