--- a/heading.html
+++ b/heading.html
@@ -3,14 +3,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+      #yellow{
+	background-color : yellow;
+	 border: solid green ;
+  border-width: 1px;
+}
+#red{
+	background-color : red;
+	 border: solid black ;
+  border-width: 1px;
+}
+#green{
+	background-color : green;
+	 border: solid yellow ;
+  border-width: 1px;
+}
+    </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Headings in HTML</title>
 </head>
-<body>
-    <h1>This is the H1 tag headings</h1>
-    <p> This is the paragraph </p>
-    
-<h2>This is the H2 tag headings</h2>
+   <p id="yellow">Paragraph-1</p>
+   <p id="red">Paragraph-2</p>
+   <p id="green">Paragraph-3</p>
 </body>
 </html>
